[gd_scene load_steps=9 format=3 uid="uid://dnebog0xn5tvl"]

[ext_resource type="Script" uid="uid://dbb5c1tpsi84j" path="res://Enemies/heart.gd" id="1_em58l"]
[ext_resource type="Texture2D" uid="uid://cwglq15wm48sp" path="res://Enemies/Sprites/heart.png" id="1_prub7"]
[ext_resource type="Shader" uid="uid://d3peyev02dgjd" path="res://Combat/ShaderTransparent.gdshader" id="2_xog2k"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wcdrv"]
resource_local_to_scene = true
shader = ExtResource("2_xog2k")
shader_parameter/effect_type = 0

[sub_resource type="CircleShape2D" id="CircleShape2D_em58l"]
radius = 5.0

[sub_resource type="Animation" id="Animation_3bnpd"]
resource_name = "Flicker"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/effect_type")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_in7x0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/effect_type")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_br643"]
_data = {
&"Flicker": SubResource("Animation_3bnpd"),
&"RESET": SubResource("Animation_in7x0")
}

[node name="Heart" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_em58l")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_wcdrv")
texture = ExtResource("1_prub7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_em58l")

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_br643")
}

[node name="FlickerTimer" type="Timer" parent="."]
one_shot = true

[node name="DespawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="FlickerTimer" to="." method="_on_flicker_timer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
